# Defi-Wifi-Hackathon

./: .gitignore  README.md  Scanner.py  main.py  parser.py  pubspec.yaml  wifi_map.html
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/defiwifi/: MainActivity.kt
docs/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: backend.dart  direction.dart  main.dart  map.dart  rs_link.dart  tile_provider.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
pyscripts/: Scanner.py  main.py  old.py  parser.py  test.py  wifi_map.html  wifi_networks.csv
rust_backend/: Cargo.toml
rust_backend/src/: lib.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
